--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div class="container">
-        
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12 col-xs-12 col-sm-12"><!-- col-md-offset-0-->
+            <div class="col-md-12 col-xs-12 col-sm-12 nopadding">
                 <div id="images">
-                    <!--img src="img/new.jpg" alt="" class="img-responsive"-->
-                    <!--<img src="img/city.jpg" alt="" class="img">-->
                     <div class="col-md-12 spacer"></div>
                     <div class="col-md-12 nopadding">
                         <div id="title">
@@ -44,7 +41,7 @@
                                     <li><a href="#content1">Conócenos</a></li>
                                     <li><a href="#blog">Blog</a></li>
                                     <li><a href="#wiki">Wiki</a></li>
-                                    <li><a href="#flisol">Flisol 2017</a></li>
+                                    <!--li><a href="#flisol">Flisol 2017</a></li-->
                                 </ul>
                             </div>
                         </div>
@@ -57,9 +54,9 @@
         </div>
         <div class="row">
             
-            <div class="col-md-12">
-                <div class="content nopadding" id="content1">
-                    <div class="col-md-12 spacer"></div>
+            <div class="col-md-10 col-md-offset-1 nopadding" id="content1">
+                <!--div class="nopadding" id="content1"-->
+                    <!--div class="col-md-12 spacer"></div-->
                     <div class="col-md-12 nopadding">
                         <div class="msj">
                             <div class="inmsj">
@@ -69,19 +66,19 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-md-offset-1 col-xs-12">
-                        <img src="img/lab.jpg" class="img-responsive padding">      
+                        <img src="img/lab.jpg" class="img-responsive padding img-thumbnai">      
                     </div>
                     <div class="col-md-5">
                         <h3 class="padding">
                             Aprendemos y enseñamos tecnologías libres, somos una comunidad de estudio
                         </h3>
-                        <!--h3 class="padding">
-                            Participamos de iniciativas de código abierto y colaboramos en equipo
-                        </h3-->
-                        <img src="img/debian.svg" class="img-responsive distro">
+                        <h3 class="padding">
+                            Nos gusta colaborar y contribuir con proyectos open source
+                        </h3>
+                        <img src="img/debian.svg" class="img-responsive distro padding">
                     </div>
                     <!--div id="content3" class="content nopadding"></div-->
-                </div>
+                <!--/div-->
             </div> 
         </div>
         <!--div class="row">
@@ -95,7 +92,7 @@
             </div>
         </div-->
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-10 col-md-offset-1 nopadding">
                 <div class="content nopadding" id="blog">
                     <div class="col-md-12 spacer"></div>
                     <div class="col-md-12 nopadding">
@@ -122,7 +119,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-10 col-md-offset-1 nopadding">
                 <div class="content nopadding" id="wiki">
                     <div class="col-md-12 spacer"></div>
                     <div class="col-md-12 nopadding">                   
@@ -148,7 +145,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <!--div class="row">
             <div class="col-md-12">
                 <div class="content nopadding" id="flisol">
                     <div class="col-md-12 spacer"></div>
@@ -168,7 +165,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div-->
     </div>
 </body>
 </html>
