--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-md-12 col-xs-12 col-sm-12 nopadding">
                 <div id="images">
-                    <div class="col-md-12 spacer"></div>
+                    <div class="col-md-12 spacer-long"></div>
                     <div class="col-md-12 nopadding">
                         <div id="title">
                             <div class="msj">
@@ -52,11 +52,12 @@
                 </div>
             </div>
         </div>
+        <div class="row"><div class="col-md-12 spacer-short"></div></div>
         <div class="row">
             
             <div class="col-md-10 col-md-offset-1 nopadding" id="content1">
                 <!--div class="nopadding" id="content1"-->
-                    <!--div class="col-md-12 spacer"></div-->
+                    <!--div class="col-md-12 spacer-long"></div-->
                     <div class="col-md-12 nopadding">
                         <div class="msj">
                             <div class="inmsj">
@@ -66,7 +67,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-md-offset-1 col-xs-12">
-                        <img src="img/lab.jpg" class="img-responsive padding img-thumbnai">      
+                        <img src="img/lab.jpg" class="img-responsive padding">      
                     </div>
                     <div class="col-md-5">
                         <h3 class="padding">
@@ -94,7 +95,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1 nopadding">
                 <div class="content nopadding" id="blog">
-                    <div class="col-md-12 spacer"></div>
+                    <div class="col-md-12 spacer-long"></div>
                     <div class="col-md-12 nopadding">
                         <div class="msj">
                             <h1 class="inmsj">Nuestro Blog</h1>
@@ -121,7 +122,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1 nopadding">
                 <div class="content nopadding" id="wiki">
-                    <div class="col-md-12 spacer"></div>
+                    <div class="col-md-12 spacer-long"></div>
                     <div class="col-md-12 nopadding">                   
                         <div class="msj">
                             <h1 class="inmsj">Nuestra Wiki</h1>
@@ -148,7 +149,7 @@
         <!--div class="row">
             <div class="col-md-12">
                 <div class="content nopadding" id="flisol">
-                    <div class="col-md-12 spacer"></div>
+                    <div class="col-md-12 spacer-long"></div>
                     <div class="col-md-12 nopadding">
                         <div class="msj">
                             <h1 class="inmsj">Flisol 2017</h1>
